--- a/web/test/fixtures/trackers.yml
+++ b/web/test/fixtures/trackers.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  lat: 
-  lon: 
+  lat: 1.5
+  lon: 1.5
 
 two:
-  lat: 
-  lon: 
+  lat: 1.5
+  lon: 1.5
