--- a/android/Tracker/app/build.gradle
+++ b/android/Tracker/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile files('libs/android-async-http-1.4.9.jar')
     compile files('libs/httpclient-4.2.2.jar')
+    compile 'com.google.android.gms:play-services:11.0.4'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
