--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="egor.by.beaconclient">
+    package="by.dagonwat.beacon">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -30,7 +30,7 @@
         </activity>
 
         <service
-            android:name=".NewService"
+            android:name=".GetImageService"
             android:enabled="true"
             android:exported="true"></service>
     </application>
