--- a/android/Tracker/.gitignore
+++ b/android/Tracker/.gitignore
@@ -1,12 +1,42 @@
-*.iml
-.gradle
-/local.properties
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+# built application files
 *.apk
 *.ap_
+
+# files for the dex VM
 *.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/**
+gen/**
+out/**
+gen-external-apklibs/**
+
+# Local configuration file (sdk path, etc)
 local.properties
-.idea
+
+# AndroidStudio
+*.iml
+*.ipr
+*.iws
+.idea/**
+.navigation/**
+classes/**
+target/**
+
+# Mac OS
+.DS_Store
+
+# Gradle
+gradle-app.setting
+.gradletasknamecache
+.gradle/**
+build/**
+
+# Proguard
+proguard/**
+
+# Trash
+trash/**
