--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,16 +1,18 @@
 *.rbc 
 capybara-*.html 
 .rspec 
-/log 
+#/log 
 /tmp 
-/db/*.sqlite3 
-/db/*.sqlite3-journal 
+#/db/*.sqlite3 
+#/db/*.sqlite3-journal 
 /public/system 
 /coverage/ 
 /spec/tmp 
 *.orig 
 rerun.txt 
 pickle-email-*.html 
+#/config/database.yml
+#/.idea
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo 
 config/initializers/secret_token.rb 
