--- a/web/Gemfile
+++ b/web/Gemfile
@@ -10,6 +10,10 @@ end
 gem 'rails', '~> 5.1.3'
 # NO IM GONNA USE POSTGRES
 gem 'pg'
+# Use Haml for BUTIFAL code style
+gem 'haml'	
+# Use bootstrap for cool features of scss
+gem 'bootstrap-sass'
 # Use Puma as the app server
 gem 'puma', '~> 3.7'
 # Use SCSS for stylesheets
@@ -18,6 +22,8 @@ gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
+# Use prefixes for CSS
+gem 'autoprefixer-rails'
 
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
