--- a/web/Gemfile
+++ b/web/Gemfile
@@ -24,6 +24,9 @@ gem 'uglifier', '>= 1.3.0'
 gem 'autoprefixer-rails'
 
 gem 'rails-ujs'
+# Use sorcery for authentication
+gem 'sorcery'
+gem 'oauth2'
 
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
