--- a/android/Tracker/build.gradle
+++ b/android/Tracker/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -21,6 +22,7 @@ task clean(type: Delete) {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 
     project.ext {
@@ -28,7 +30,7 @@ allprojects {
               minSdkVersion    : 14,
               compileSdkVersion: 25,
               targetSdkVersion : 25,
-              buildToolsVersion: '25.0.0'
+              buildToolsVersion: '26.0.0'
         ]
 
         libraries = [
