--- a/web/.gitignore
+++ b/web/.gitignore
@@ -14,7 +14,7 @@ pickle-email-*.html
 /config/database.yml
 /.idea
 /node_modules
-/public/uploads/*s
+/public/uploads/*
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo 
 config/initializers/secret_token.rb 
