--- a/web/Gemfile
+++ b/web/Gemfile
@@ -27,6 +27,9 @@ gem 'rails-ujs'
 # Use sorcery for authentication
 gem 'sorcery'
 gem 'oauth2'
+# Use carrierwave and minimagick for pictures
+gem 'carrierwave', '~> 0.10.0'
+gem 'mini_magick', '~> 4.3'
 
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
