--- a/web/Gemfile
+++ b/web/Gemfile
@@ -9,7 +9,7 @@ end
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.1.3'
 # NO IM GONNA USE POSTGRES
-gem 'pg'
+gem 'pg', '~> 0.21.0'
 # Use Haml for BUTIFAL code style
 gem 'haml'
 # Use Puma as the app server
@@ -22,6 +22,10 @@ gem 'uglifier', '>= 1.3.0'
 # gem 'therubyracer', platforms: :ruby
 # Use prefixes for CSS
 gem 'autoprefixer-rails'
+# Use sidekiw for analizing data in a background
+gem 'sidekiq'
+# Use sidekiq cron for scheduling worker
+gem "sidekiq-cron", "~> 0.6.3"
 
 gem 'rails-ujs'
 # Use sorcery for authentication
