--- a/web/.gitignore
+++ b/web/.gitignore
@@ -15,7 +15,9 @@ pickle-email-*.html
 /.idea
 /node_modules
 /public/uploads/*
+/public/assets/*
 /log/*
+/config/database.yml
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
